Fix logo on mobile landing page.

--- a/styles/map-controls.less
+++ b/styles/map-controls.less
@@ -266,9 +266,6 @@
 // -----------------------
 
 .landing {
-  #persistent-logo {
-    bottom: 12px;
-  }
 
   .cloud-bottom {
     bottom: -10%;
